# Tiny-GIF

./: CMakeLists.txt  Dictionary.c  Dictionary.h  README.md  main.c
include/: Dictionary.h  Gif.h  LZW.h  gif.h
src/: Dictionary.c  Gif.c  LZW.c  main.c
test/: Dictionary.check  LZW.check
